# portadoc

./: .gitignore  @AGENT.md  @fix_plan.md  CLAUDE.md  Makefile  OCR_BENCHMARKS.md  PROMPT.md  RANKING_IMPLEMENTATION.md  README.md  portadoc  pyproject.toml  requirements.txt
.github/workflows/: deploy-browser.yml
config/: harmonize.yaml  sanitize.yaml
data/: ocr_confusions.yaml
data/bigrams/: english_bigrams.txt
data/dictionaries/: custom.txt  medical_terms.txt
data/input/: peter_lou_words_slim.csv  puffy_intake_images_words.csv
data/output/: peter_lou_50dpi_got.txt
docs/: README.md
docs/tickets/: CLAUDE-001-kraken-integration.md  CLAUDE-002-vlm-bbox-fusion.md  CLAUDE-002a-vlm-fusion-tdd.md  CLAUDE-002b-orphan-wrap-and-got.md  CLAUDE-003-browser-pixel-detection.md  CLAUDE-004-mcp-server-extract.md  RALPH-001-browser-client.md  RALPH-001-degraded-harmonization.md  TEMPLATE_CLAUDE.md  TEMPLATE_RALPH.md  bugs_n_wishes.md
logs/: claude_output_2026-01-17_21-18-33.log.raw
scripts/: convert_dictionaries.py  create_cat_in_hat_pdf.py  test_got_ocr.py
specs/: browser-client.md  kraken-integration.md  portadoc.md  sanitize.md
src/portadoc/: __init__.py  api.py  apply.py  cli.py  config.py  detection.py  extractor.py  geometric_clustering.py  harmonize.py  metrics.py  models.py  output.py  page_align.py  patterns.py  pdf.py  preprocess.py  ranking.py  reading_order.py  redact.py  (+3 more)
tests/: __init__.py  test_apply.py  test_geometric_clustering.py  test_redact.py  test_sanitize.py  test_sanitize_correction.py  test_sanitize_ranking.py  test_vlm_fusion.py
(+55 files in other folders)
